--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <table border="1px solid black">
         <tr>
           <td>HTML Tasks</td>
-          <td><a href="./HTML Tasks" style="color: blue">HTML Tasks</a></td>
+          <td><a href="HTML Tasks" style="color: blue">HTML Tasks</a></td>
         </tr>
         <tr>
           <td>HTML Tasks</td>
-          <td><a href="./CSS Tasks" style="color: blue">HTML Tasks</a></td>
+          <td><a href="CSS Tasks" style="color: blue">HTML Tasks</a></td>
         </tr>
       </table>
     </div>
