--- a/HTML Tasks/index.html
+++ b/HTML Tasks/index.html
@@ -3,40 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>HTML Tasks</title>
   </head>
   <body>
     <div class="box">
       <h1>Index File</h1>
-      <table border="1px solid black">
+      <table cellspacing="0">
         <tr>
-          <td>Task 1</td>
+          <td>Task 1 =></td>
           <td>
-            <a href="Task 1/Task1.html" style="color: blue">HTML Tasks</a>
+            <a href="Task 1/Task1.html" style="color: blue">Visit Page</a>
           </td>
         </tr>
         <tr>
-          <td>Task 2</td>
+          <td>Task 2 =></td>
           <td>
-            <a href="Task 2/Task2.html" style="color: blue">HTML Tasks</a>
+            <a href="Task 2/Task2.html" style="color: blue">Visit Page</a>
           </td>
         </tr>
         <tr>
-          <td>Task 2</td>
+          <td>Task 3 =></td>
           <td>
-            <a href="Task 3/Task2.html" style="color: blue">HTML Tasks</a>
+            <a href="Task 3/Task3.html" style="color: blue">Visit Page</a>
           </td>
         </tr>
         <tr>
-          <td>Task 2</td>
+          <td>Task 4 =></td>
           <td>
-            <a href="Task 4/Task2.html" style="color: blue">HTML Tasks</a>
+            <a href="Task 4/Task4.html" style="color: blue">Visit Page</a>
           </td>
         </tr>
         <tr>
-          <td>Task 2</td>
+          <td>Task 5 =></td>
           <td>
-            <a href="Task 5/Task2.html" style="color: blue">HTML Tasks</a>
+            <a href="Task 5/Task5.html" style="color: blue">Visit Page</a>
           </td>
         </tr>
       </table>
