--- a/HTML Tasks/index.html
+++ b/HTML Tasks/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="box">
-      <h1>Index File</h1>
+      <h1>Index</h1>
       <table cellspacing="0">
         <tr>
           <td>Task 1 =></td>
