--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
       <table cellspacing="0">
         <tr>
           <td>HTML Tasks</td>
-          <td><a href="HTML Tasks" style="color: blue">HTML Tasks</a></td>
+          <td>
+            <a href="HTML Tasks" style="color: blue" target="_blank"
+              >HTML Tasks</a
+            >
+          </td>
         </tr>
         <tr>
           <td>CSS Tasks</td>
-          <td><a href="CSS Tasks" style="color: blue">CSS Tasks</a></td>
+          <td>
+            <a href="CSS Tasks" style="color: blue" target="_blank"
+              >CSS Tasks</a
+            >
+          </td>
         </tr>
       </table>
     </div>
