--- a/HTML Tasks/index.html
+++ b/HTML Tasks/index.html
@@ -13,31 +13,41 @@
         <tr>
           <td>Task 1 =></td>
           <td>
-            <a href="Task 1/Task1.html" style="color: blue">Visit Page</a>
+            <a href="Task 1/Task1.html" style="color: blue" target="_parent"
+              >Visit Page</a
+            >
           </td>
         </tr>
         <tr>
           <td>Task 2 =></td>
           <td>
-            <a href="Task 2/Task2.html" style="color: blue">Visit Page</a>
+            <a href="Task 2/Task2.html" style="color: blue" target="_parent"
+              >Visit Page</a
+            >
           </td>
         </tr>
         <tr>
           <td>Task 3 =></td>
           <td>
-            <a href="Task 3/Task3.html" style="color: blue">Visit Page</a>
+            <a href="Task 3/Task3.html" style="color: blue" target="_parent"
+              >Visit Page</a
+            >
           </td>
         </tr>
         <tr>
           <td>Task 4 =></td>
           <td>
-            <a href="Task 4/Task4.html" style="color: blue">Visit Page</a>
+            <a href="Task 4/Task4.html" style="color: blue" target="_parent"
+              >Visit Page</a
+            >
           </td>
         </tr>
         <tr>
           <td>Task 5 =></td>
           <td>
-            <a href="Task 5/Task5.html" style="color: blue">Visit Page</a>
+            <a href="Task 5/Task5.html" style="color: blue" target="_parent"
+              >Visit Page</a
+            >
           </td>
         </tr>
       </table>
