Updated All Files

--- a/CSS Tasks/Task 4/index.html
+++ b/CSS Tasks/Task 4/index.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Task 4</title>
   </head>
   <body>
     <div class="box">
-      <a class="main-box first" href="#">Main</a>
+      <a class="main-box first" href="#"></a>
 
-      <a class="main-box second" href="https://www.java.com/en/">Java</a>
+      <a class="main-box second" href="https://www.java.com/en/"></a>
 
       <a
         class="main-box third"
         href="https://developer.mozilla.org/en-US/docs/Web/HTML"
-        >HTML</a
-      >
+      ></a>
 
-      <a class="main-box fourth" href="https://en.wikipedia.org/wiki/CSS"
-        >CSS</a
-      >
+      <a class="main-box fourth" href="https://en.wikipedia.org/wiki/CSS"></a>
     </div>
 
     <div class="para-box">
