--- a/CSS Tasks/Task 2/index.html
+++ b/CSS Tasks/Task 2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <title>Document</title>
+    <title>Task 2</title>
   </head>
   <body>
     <div class="vertical">
