--- a/CSS Tasks/index.html
+++ b/CSS Tasks/index.html
@@ -13,7 +13,7 @@
         <tr>
           <td>Task 1 =></td>
           <td>
-            <a href="Task 1/Task1.html" style="color: blue" target="_parent"
+            <a href="Task 1/index.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -21,7 +21,7 @@
         <tr>
           <td>Task 2 =></td>
           <td>
-            <a href="Task 2/Task2.html" style="color: blue" target="_parent"
+            <a href="Task 2/index.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -29,7 +29,7 @@
         <tr>
           <td>Task 3 =></td>
           <td>
-            <a href="Task 3/Task3.html" style="color: blue" target="_parent"
+            <a href="Task 3/index.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -37,7 +37,7 @@
         <tr>
           <td>Task 4 =></td>
           <td>
-            <a href="Task 4/Task4.html" style="color: blue" target="_parent"
+            <a href="Task 4/index.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -45,7 +45,7 @@
         <tr>
           <td>Task 5 =></td>
           <td>
-            <a href="Task 5/Task5.html" style="color: blue" target="_parent"
+            <a href="Task 5/index.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -53,7 +53,7 @@
         <tr>
           <td>Task 6 =></td>
           <td>
-            <a href="Task 6/Task5.html" style="color: blue" target="_parent"
+            <a href="Task 6/index.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -61,12 +61,13 @@
         <tr>
           <td>Task 7 =></td>
           <td>
-            <a href="Task 7/Task5.html" style="color: blue" target="_parent"
-              >Visit Page</a
-            >
+            <a href="Task 7/index.html" style="color: blue">Visit Page</a>
           </td>
         </tr>
       </table>
     </div>
+    <footer>
+      <button>👈🏻 <a href="../index.html">Back</a></button>
+    </footer>
   </body>
 </html>
