--- a/HTML Tasks/index.html
+++ b/HTML Tasks/index.html
@@ -13,7 +13,7 @@
         <tr>
           <td>Task 1 =></td>
           <td>
-            <a href="Task 1/Task1.html" style="color: blue" target="_parent"
+            <a href="Task 1/Task1.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -21,7 +21,7 @@
         <tr>
           <td>Task 2 =></td>
           <td>
-            <a href="Task 2/Task2.html" style="color: blue" target="_parent"
+            <a href="Task 2/Task2.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -29,7 +29,7 @@
         <tr>
           <td>Task 3 =></td>
           <td>
-            <a href="Task 3/Task3.html" style="color: blue" target="_parent"
+            <a href="Task 3/Task3.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -37,7 +37,7 @@
         <tr>
           <td>Task 4 =></td>
           <td>
-            <a href="Task 4/Task4.html" style="color: blue" target="_parent"
+            <a href="Task 4/Task4.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
@@ -45,12 +45,15 @@
         <tr>
           <td>Task 5 =></td>
           <td>
-            <a href="Task 5/Task5.html" style="color: blue" target="_parent"
+            <a href="Task 5/Task5.html" style="color: blue" target="_blank"
               >Visit Page</a
             >
           </td>
         </tr>
       </table>
     </div>
+    <footer>
+      <button>👈🏻 <a href="../index.html">Back</a></button>
+    </footer>
   </body>
 </html>
