--- a/CSS Tasks/index.html
+++ b/CSS Tasks/index.html
@@ -61,7 +61,9 @@
         <tr>
           <td>Task 7 =></td>
           <td>
-            <a href="Task 7/index.html" style="color: blue">Visit Page</a>
+            <a href="Task 7/index.html" style="color: blue" target="_blank"
+              >Visit Page</a
+            >
           </td>
         </tr>
       </table>
