--- a/CSS Tasks/Task 6/index.html
+++ b/CSS Tasks/Task 6/index.html
@@ -27,11 +27,11 @@
         <button class="buttonLogin">Login</button>
         <br />
         <br />
-        <input class="remeber" name="Remeber" type="checkbox" />
-        <lable for="Remeber"> Remeber Me </lable>
+        <input class="remember" name="remember" type="checkbox" />
+        <lable for="remember"> Remember Me </lable>
         <div class="lastBox">
           <button>Cancel</button>
-          <p>Forget <a href="#">Password</a></p>
+          <p>Forgot <a class="forgetPass" href="#">password?</a></p>
         </div>
       </form>
     </div>
