--- a/CSS Tasks/Task 6/index.html
+++ b/CSS Tasks/Task 6/index.html
@@ -28,7 +28,7 @@
         <br />
         <br />
         <input class="remember" name="remember" type="checkbox" />
-        <lable for="remember"> Remember Me </lable>
+        <lable for="remember"> Remember me </lable>
         <div class="lastBox">
           <button>Cancel</button>
           <p>Forgot <a class="forgetPass" href="#">password?</a></p>
