--- a/CSS Tasks/Task 7/index.html
+++ b/CSS Tasks/Task 7/index.html
@@ -36,12 +36,12 @@
           <tr>
             <td><label for="gender">Gender:</label></td>
             <td class="gender">
-              <label for="male">Male:</label>
-              <input type="radio" class="gender" name="male" />
-              <label for="female">Female:</label>
-              <input type="radio" class="gender" name="female" />
+              <label for="gender">Male:</label>
+              <input type="radio" class="gender" name="gender" />
+              <label for="gender">Female:</label>
+              <input type="radio" class="gender" name="gender" />
               <label for="otders">Others:</label>
-              <input type="radio" class="gender" name="otders" />
+              <input type="radio" class="gender" name="gender" />
             </td>
           </tr>
 
