--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             <a href="CSS Tasks" style="color: blue">CSS Tasks</a>
           </td>
         </tr>
+        <tr>
+          <td>BootStrap Tasks</td>
+          <td>
+            <a href="BootStrap" style="color: blue">BootStrap Tasks</a>
+          </td>
+        </tr>
       </table>
     </div>
   </body>
