--- a/index.html
+++ b/index.html
@@ -13,19 +13,29 @@
         <tr>
           <td>HTML Tasks</td>
           <td>
-            <a href="HTML Tasks" style="color: blue">HTML Tasks</a>
+            <a href="HTML Tasks/index.html" style="color: blue">HTML Tasks</a>
           </td>
         </tr>
         <tr>
           <td>CSS Tasks</td>
           <td>
-            <a href="CSS Tasks" style="color: blue">CSS Tasks</a>
+            <a href="CSS Tasks/index.html" style="color: blue">CSS Tasks</a>
           </td>
         </tr>
         <tr>
           <td>BootStrap Tasks</td>
           <td>
-            <a href="BootStrap" style="color: blue">BootStrap Tasks</a>
+            <a href="BootStrap/index.html" style="color: blue"
+              >BootStrap Tasks</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>JavaScript Tasks</td>
+          <td>
+            <a href="JavaScript/index.html" style="color: blue"
+              >JavaScript Tasks</a
+            >
           </td>
         </tr>
       </table>
