--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -66,6 +66,14 @@
             >
           </td>
         </tr>
+        <tr>
+          <td>Task 8 =></td>
+          <td>
+            <a href="Task 8/index.html" style="color: blue" target="_blank"
+              >Visit Page</a
+            >
+          </td>
+        </tr>
       </table>
     </div>
     <footer>
