--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             >
           </td>
         </tr>
+        <tr>
+          <td>React Tasks</td>
+          <td>
+            <a href="React/index.html" style="color: blue">React Tasks</a>
+          </td>
+        </tr>
       </table>
     </div>
   </body>
